Bug #40155 [Falcon] Error: assertion (ret == 0) failed at line 80 in file Mutex.cpp

Adding code for writing the error status from the call to pthread_mutex_lock to
the mysql log file when this error occurs. This does not fix the problem but
will help understanding why this assert happens.